Ignoring irrelvant file updates
e.g. Excel macros update continually, even without content change

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 comparison with Band spreadsheet/results/
 comparison with Band spreadsheet/Final_Report_SOSS02_Band5SpreadsheetWorkedExample1.xlsm
+comparison with Band spreadsheet/Final_Report_SOSS02_Band5SpreadsheetWorkedExample1.xlsm
+comparison with Band spreadsheet/results/run.time.txt
