--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
-comparison with Band spreadsheet/results/
 comparison with Band spreadsheet/Final_Report_SOSS02_Band5SpreadsheetWorkedExample1.xlsm
-comparison with Band spreadsheet/results/run.time.txt
+comparison with Band spreadsheet/results/
+comparison with Band spreadsheet/results/tables/
+comparison with Band spreadsheet/results/input/
+comparison with Band spreadsheet/results/figures/
+code_FinalVersion/code_FinalVersion/results/
+code_FinalVersion/code_FinalVersion/results/tables/
+code_FinalVersion/code_FinalVersion/results/input/
+code_FinalVersion/code_FinalVersion/results/figures/
+stochCRM_developmental/results/
+stochCRM_developmental/code_FinalVersion/results/tables/
+stochCRM_developmental/code_FinalVersion/results/input/
+stochCRM_developmental/code_FinalVersion/results/figures/
+
+
+
